syntax = "proto3";
import "Types.proto";
option java_package = "com.visitor.protocol";

/**
 * Messages that will be send by the client during a game 
 */

//This will be send when player plays a card from hand
message PlayCard {
    string gameID = 1;
    string username = 2;
    string cardID = 3;
}

//This will be send when player activates a card in play
message ActivateCard {
    string gameID = 1;
    string username = 2;
    string cardID = 3;
}

//This will be send when player studies a card in hand
message StudyCard {
    string gameID = 1;
    string username = 2;
    string cardID = 3;
}

//This will be send when player passes initiative
message Pass {
    string gameID = 1;
    string username = 2;
}

//This will be send when player mulligans his starting hand
message Mulligan {
    string gameID = 1;
    string username = 2;
}

//This will be send when player keeps his starting hand
message Keep {
    string gameID = 1;
    string username = 2;
}

//This will be send when player concedes from a game
message Concede {
    string gameID = 1;
    string username = 2;
}

//This will be send as a response to OrderCards message from server
message OrderCardsResponse {
    string gameID = 1;
    repeated string orderedCards = 2;
}

//This will be send as a response to SelectFromList message from server
message SelectFromResponse {
    SelectFromType messageType = 1;
    string gameID = 2;
    repeated string selectedCards = 3;
}

//This will be send as a response to SelectPlayer message from server
message SelectPlayerResponse {
    string gameID = 1;
    string selectedPlayerName = 2;
}

message SelectXValueResponse {
    string gameID = 1;
    int32 selectedXValue = 2;
}

message ClientGameMessage {
    oneof payload {
        PlayCard                        playCard = 7;
        ActivateCard                    activateCard = 8;
        StudyCard                       studyCard = 9;
        Pass                            pass = 10;
        Mulligan                        mulligan = 13;
        Keep                            keep = 14;
        Concede                         concede = 16;
        OrderCardsResponse              orderCardsResponse = 17;
        SelectFromResponse              selectFromResponse = 15;
        SelectPlayerResponse            selectPlayerResponse = 22;
        SelectXValueResponse            selectXValueResponse = 23;
    }
};
